AP: Escape SSID and password
If a user had the ampersand & in a password, it could result in the kit
cutting of the string. Example 'abc&def' would become just 'abc'

Now to handle this, the Kit MUST revert this with some kind of 'unescape' function

--- a/esp/data/final.html
+++ b/esp/data/final.html
@@ -722,8 +722,8 @@ var app = new Vue({
         this.weHaveTriedConnecting = true;
         this.notify('Kit is trying to connect online...', 2000);
         that.httpGet(that.theApi + path +
-            '?ssid=' + that.selectedWifi +
-            '&password=' + that.wifipass +
+            '?ssid=' + escape(that.selectedWifi) +
+            '&password=' + escape(that.wifipass) +
             '&token=' + that.usertoken +
             '&epoch=' + that.browsertime +
             '&mode=network',
