Changed deprecated escape() to encodeURIcomponent()

--- a/esp/data/final.html
+++ b/esp/data/final.html
@@ -722,8 +722,8 @@ var app = new Vue({
         this.weHaveTriedConnecting = true;
         this.notify('Kit is trying to connect online...', 2000);
         that.httpGet(that.theApi + path +
-            '?ssid=' + escape(that.selectedWifi) +
-            '&password=' + escape(that.wifipass) +
+            '?ssid=' + encodeURIComponent(that.selectedWifi) +
+            '&password=' + encodeURIComponent(that.wifipass) +
             '&token=' + that.usertoken +
             '&epoch=' + that.browsertime +
             '&mode=network',
