--- a/esp/build_data/build_index.html
+++ b/esp/build_data/build_index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <!-- shortcut::favicon.ico -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SCK Setup</title>
   </head>
