Correct css class name

--- a/esp/build_data/index.html
+++ b/esp/build_data/index.html
@@ -15,7 +15,7 @@
     <div class="container" id="app" style="display:none;">
 
       <div class="topnav sticky ">
-        <div class="bg-blue">
+        <div class="bg-black">
 
           <p class="text-center">SCK 2.0 Setup</p>
 
@@ -427,7 +427,7 @@ a{
   text-decoration: none;
 }
 
-.bg-blue{
+.bg-black{
   background-color: #262626 !important;
 }
 .bg-yellow{
