--- a/esp/build_data/build_index.html
+++ b/esp/build_data/build_index.html
@@ -15,7 +15,7 @@
     <div class="container" id="app" style="display:none;">
 
       <div class="topnav sticky ">
-        <div class="bg-blue">
+        <div class="bg-black">
 
           <p class="text-center">SCK 2.0 Setup</p>
 
