--- a/esp/build_data/index.html
+++ b/esp/build_data/index.html
@@ -59,10 +59,11 @@
         <div v-show='page[0].visible'>
           <h2 class="text-cyan text-center">WELCOME TO SMART CITIZEN KIT CONFIGURATION</h2>
 
-          <div v-if="updateNeeded" class="text-center p10">
+          <div v-if="kitstatus.updateNeeded == 'True'" class="text-center p10">
             <h4 style="color:red;">UPDATE IS NEEDED</h4>
-            <form method='POST' action='/update' enctype='multipart/form-data'>
-              <input type='file' name='update' class="btn bg-yellow ">
+            <form @submit="checkUploadForm" action="/update" method="POST" enctype='multipart/form-data'>
+              <!-- accept=".bin" -->
+              <input id="firmware_filename" type='file' name='update' class="btn bg-yellow ">
               <input type='submit' value='Update' class="btn bg-yellow">
             </form>
           </div>
@@ -194,7 +195,7 @@
             Enable Debug buttons
           </label>
 
-          <p class="font70">Vue.js version: {{Vue.version}}</p>
+          <p class="font70">Vue.js version: {{vueVersion}}</p>
           <!--
           <label for="label-experimental" class="font80">
             <input type="checkbox" name="" id="label-experimental" value="" v-model="showExperimental"/>
@@ -569,16 +570,16 @@ a{
 var app = new Vue({
   el: '#app',
   data: {
-    theApi: window.location.protocol + '//' + window.location.host + '/',
-    development: false,
     browsertime: Math.floor(Date.now() / 1000),
-    kitstatus: [],
+    currentPage: 0,
+    development: false,
     devicetime: 0,
-    logging: [],
+    filename: null,
     intervals: false,
     kitinfo: false,
-    currentPage: 0,
+    kitstatus: [],
     lastPage: 0,
+    logging: [],
     page: [
        {'visible': true,  'footer': 'HOME',         'backTo': 0, 'back': false },
        {'visible': false, 'footer': 'REGISTER Key', 'backTo': 0, 'back': true  },
@@ -591,20 +592,21 @@ var app = new Vue({
     ],
     publishinterval: 2,
     readinginterval: 60,
+    sdlog: false,
     selectedWifi: '',
-    sensors: false,
     sensor1: false,
     sensor2: false,
     sensor3: false,
     sensor4: false,
+    sensors: false,
     showDebug: false,
     showExperimental: false,
     showInterval: false,
     showSdCard: false,
-    sdlog: false,
+    theApi: window.location.protocol + '//' + window.location.host + '/',
     usertoken: '',
-    updateNeeded: true,
     version: 'SCK 2.0 / SAM V0.0.2 / ESP V0.0.2',
+    vueVersion: Vue.version,
     weHaveTriedConnecting: false,
     wifiname: '',
     wifipass: '',
@@ -760,18 +762,16 @@ var app = new Vue({
       // Hide current page
       this.page[this.currentPage].visible = false;
 
-      // Find which page to show next
-      // Is it a specified page, or the next one?
-      if ( typeof num !== 'undefined') {
-        this.currentPage = parseInt(num);
-      }else{
-        // Find the last page so we wont go too far, when clicking 'Next'
+      // If no page specified, we go to the next page
+      if ( typeof num === 'undefined') {
+        // Don't go too far, when clicking 'Next'
         if ( this.currentPage === (this.page.length - 1)) {
           //console.log('Last page: ' + this.currentPage)
           return;
         }
-
         this.currentPage = parseInt(this.currentPage + 1);
+      }else{
+        this.currentPage = parseInt(num);
       }
 
       // Show it
@@ -805,6 +805,15 @@ var app = new Vue({
 
       console.log('Notify:', msg);
     },
+    checkUploadForm: function(e){
+      var str = document.getElementById('firmware_filename').value
+      var fileType = str.substr(str.indexOf('.'));
+      console.log('Uploading firmware with a filetype of: ', fileType)
+
+      //console.log(e)
+
+      //e.preventDefault();
+    }
   },
   computed: {
     checkIfDebugMode: function(){
