--- a/esp/build_data/index.html
+++ b/esp/build_data/index.html
@@ -811,13 +811,22 @@ var app = new Vue({
       let formData = new FormData();
       let req = new XMLHttpRequest();
       formData.append('file', this.file);
-      req.open("POST", '/update');
+
+      req.onreadystatechange = function() {
+        if (req.readyState === 4) {
+          callback(req.response);
+        }
+      }
+
+      req.open("POST", this.theApi + '/update');
+      //req.open("GET", 'http://192.168.244.1/ping');
       req.send(formData);
+
+      console.log(req);
+      console.log(req.response);
 
       btn = document.getElementById('firmware_button');
       btn.value = 'Updating..'
-      console.log(req);
-
     }
   },
   computed: {
