--- a/esp/build_data/index.html
+++ b/esp/build_data/index.html
@@ -814,12 +814,13 @@ var app = new Vue({
 
       req.onreadystatechange = function() {
         if (req.readyState === 4) {
-          callback(req.response);
+          console.log(req)
+          //callback(req.response);
         }
       }
 
-      req.open("POST", this.theApi + '/update');
-      //req.open("GET", 'http://192.168.244.1/ping');
+      //req.open("POST", this.theApi + 'ping');
+      req.open("GET", 'http://192.168.1.1/ping');
       req.send(formData);
 
       console.log(req);
