--- a/esp/build_data/build_index.html
+++ b/esp/build_data/build_index.html
@@ -59,7 +59,7 @@
         <div v-show='page[0].visible'>
           <h2 class="text-cyan text-center">WELCOME TO SMART CITIZEN KIT CONFIGURATION</h2>
 
-          <div v-if="kitstatus.updateNeeded == 'true'" class="text-center p10">
+          <div v-if="kitstatus.updateNeeded == 'true' || allowForceUpdate " class="text-center p10">
             <h4 style="color:red;">FIRMWARE UPDATE IS NEEDED!</h4>
             <h4>Upload your ESP firmware here:</h4>
             <form @submit.prevent="submitFirmware" @change="checkUploadForm" method="POST" enctype='multipart/form-data'>
@@ -184,6 +184,7 @@
 
 
           <button id="copied-notification" class="btn bg-yellow" type="button" v-on:click="copyTextToClipboard()">Copy info to clipboard</button>
+          <button id="" class="btn bg-yellow" type="button" v-on:click="allowFirmwareUpdate()">Force Allow update</button>
 
           <div id="id-logging">
             <hr />
