--- a/esp/build_data/build_index.html
+++ b/esp/build_data/build_index.html
@@ -59,6 +59,7 @@
         <div v-show='page[0].visible'>
           <h2 class="text-cyan text-center">WELCOME TO SMART CITIZEN KIT CONFIGURATION</h2>
 
+          <button id="" class="btn" type="button" v-on:click="allowFirmwareUpdate()">Force Allow update</button>
           <div v-if="kitstatus.updateNeeded == 'true' || allowForceUpdate " class="text-center p10">
             <h4 style="color:red;">FIRMWARE UPDATE IS NEEDED!</h4>
             <h4>Upload your ESP firmware here:</h4>
@@ -70,7 +71,7 @@
               <p>Filename: <b> {{file.name}}</b></p>
               <p>Size: <b>{{file.size}}</b></p>
             </div>
-            <p>{{kitstatus.updateStatus}}</p>
+            <p>{{kitstatus.updatedStatus}}</p>
           </div>
           <div v-else>
             <p>Is this your first time here?</p>
@@ -184,7 +185,6 @@
 
 
           <button id="copied-notification" class="btn bg-yellow" type="button" v-on:click="copyTextToClipboard()">Copy info to clipboard</button>
-          <button id="" class="btn bg-yellow" type="button" v-on:click="allowFirmwareUpdate()">Force Allow update</button>
 
           <div id="id-logging">
             <hr />
