--- a/esp/build_data/index.html
+++ b/esp/build_data/index.html
@@ -59,6 +59,7 @@
         <div v-show='page[0].visible'>
           <h2 class="text-cyan text-center">WELCOME TO SMART CITIZEN KIT CONFIGURATION</h2>
 
+          <button id="" class="btn" type="button" v-on:click="allowFirmwareUpdate()">Force Allow update</button>
           <div v-if="kitstatus.updateNeeded == 'true' || allowForceUpdate " class="text-center p10">
             <h4 style="color:red;">FIRMWARE UPDATE IS NEEDED!</h4>
             <h4>Upload your ESP firmware here:</h4>
@@ -70,7 +71,7 @@
               <p>Filename: <b> {{file.name}}</b></p>
               <p>Size: <b>{{file.size}}</b></p>
             </div>
-            <p>{{kitstatus.updateStatus}}</p>
+            <p>{{kitstatus.updatedStatus}}</p>
           </div>
           <div v-else>
             <p>Is this your first time here?</p>
@@ -184,7 +185,6 @@
 
 
           <button id="copied-notification" class="btn bg-yellow" type="button" v-on:click="copyTextToClipboard()">Copy info to clipboard</button>
-          <button id="" class="btn bg-yellow" type="button" v-on:click="allowFirmwareUpdate()">Force Allow update</button>
 
           <div id="id-logging">
             <hr />
@@ -672,6 +672,7 @@ var app = new Vue({
         return that.periodic(ms);
       }, ms);
     },
+
     selectApiUrl: function () {
       // If we are running this from the kit,
       // the API should be on the same IP and port
@@ -683,7 +684,8 @@ var app = new Vue({
         this.development = true;
       }
     },
-    httpGet: function(theUrl, callback) {
+
+    xmlWrapper: function(theUrl, callback) {
       //console.log('theurl: ' + theUrl);
       var xmlHttp = new XMLHttpRequest();
       var that = this;
@@ -702,10 +704,11 @@ var app = new Vue({
       xmlHttp.open( "GET", theUrl, true ); // false for synchronous request, true = async
       xmlHttp.send( null );
     },
+
     jsGet: function(path) {
       var that = this;
 
-      this.httpGet(this.theApi + path, function(res){
+      this.xmlWrapper(this.theApi + path, function(res){
         if (path === 'aplist') {
           that.wifis = JSON.parse(res);
         }
@@ -733,7 +736,7 @@ var app = new Vue({
       if (purpose == 'connect'){
         this.weHaveTriedConnecting = true;
         this.notify('Kit is trying to connect online...', 2000);
-        that.httpGet(that.theApi + path +
+        that.xmlWrapper(that.theApi + path +
             '?ssid=' + encodeURIComponent(that.selectedWifi) +
             '&password=' + encodeURIComponent(that.wifipass) +
             '&token=' + that.usertoken +
@@ -748,7 +751,7 @@ var app = new Vue({
 
       if (purpose == 'synctime'){
         this.notify('Starting to log on SD CARD..', 2000);
-        this.httpGet(this.theApi +  path + '?epoch=' + this.browsertime + '&mode=sdcard', function(res){
+        this.xmlWrapper(this.theApi +  path + '?epoch=' + this.browsertime + '&mode=sdcard', function(res){
           // TODO: What is the correct response.key from the kit?
           that.notify(JSON.parse(res).todo, 5000);
         });
@@ -807,33 +810,44 @@ var app = new Vue({
 
       console.log('Notify:', msg);
     },
+
     checkUploadForm: function(e){
       this.file = this.$refs.file.files[0];
     },
+
     // POST the file to /action via AJAX
     submitFirmware: function(e){
+      console.log('Before calling ajax')
+      this.submitFirmwareAJAX(function(res){
+        console.log('Response:')
+        console.log(res);
+      });
+      console.log('After calling ajax, waiting for response..')
 
+      btn = document.getElementById('firmware_button');
+      btn.value = 'Updating..'
+    },
+
+    submitFirmwareAJAX: function(){
       let formData = new FormData();
       let req = new XMLHttpRequest();
       formData.append('file', this.file);
 
       req.onreadystatechange = function() {
         if (req.readyState === 4) {
-          console.log(req)
-          //callback(req.response);
+          console.log('request:', req)
+          console.log('response:', req.response);
         }
       }
-
-      //req.open("POST", this.theApi + 'ping');
-      req.open("GET", 'http://192.168.1.1/ping');
+      req.onerror = function(e){
+        console.log(error, e);
+      }
+      req.open("POST", this.theApi + 'update');
+      //req.open("GET", this.theApi + 'ping');
+      //req.open("GET", 'http://192.168.1.1/ping');
       req.send(formData);
-
-      console.log(req);
-      console.log(req.response);
-
-      btn = document.getElementById('firmware_button');
-      btn.value = 'Updating..'
-    }
+      console.log('formData sent via AJAX to: ' + this.theApi + 'update');
+    },
   },
   computed: {
     checkIfDebugMode: function(){
