--- a/esp/build_data/build_index.html
+++ b/esp/build_data/build_index.html
@@ -72,6 +72,7 @@
               <p>Size: <b>{{file.size}}</b></p>
             </div>
             <p>{{kitstatus.updatedStatus}}</p>
+            <p id="firmware-update-status"></p>
           </div>
           <div v-else>
             <p>Is this your first time here?</p>
