--- a/esp/build_data/index.html
+++ b/esp/build_data/index.html
@@ -57,11 +57,10 @@
         </div>
 
         <div v-show='page[0].visible'>
-          <h2 class="text-cyan text-center">WELCOME TO SMART CITIZEN KIT CONFIGURATION</h2>
+          <h2 class="text-blue text-center">WELCOME TO SMART CITIZEN KIT CONFIGURATION</h2>
 
-          <button id="" class="btn" type="button" v-on:click="allowFirmwareUpdate()">Force Allow update</button>
           <div v-if="kitstatus.updateNeeded == 'true' || allowForceUpdate " class="text-center p10">
-            <h4 style="color:red;">FIRMWARE UPDATE IS NEEDED!</h4>
+            <h4 v-if="kitstatus.updateNeeded == 'true'" style="color:red;">FIRMWARE UPDATE IS NEEDED!</h4>
             <h4>Upload your ESP firmware here:</h4>
             <form @submit.prevent="submitFirmware" @change="checkUploadForm" method="POST" enctype='multipart/form-data'>
               <input id="firmware_filename" accept=".bin" type='file' name='update' ref="file" class="p10" style="border:1px solid #ccc">
@@ -71,14 +70,13 @@
               <p>Filename: <b> {{file.name}}</b></p>
               <p>Size: <b>{{file.size}}</b></p>
             </div>
-            <p>{{kitstatus.updatedStatus}}</p>
-            <p id="firmware-update-status"></p>
+            <p id="firmware-update-status" class="text-orange"></p>
           </div>
           <div v-else>
             <p>Is this your first time here?</p>
-            <p>Remember before you start you need to visit <span class="text-cyan">onboarding.smartcitizen.me</span> to obtain a Device Key</p>
+            <p>Remember before you start you need to visit <span class="text-blue">onboarding.smartcitizen.me</span> to obtain a Device Key</p>
             <button class="btn bg-yellow" id="start" type="button" v-on:click='gotoPage()'>Start</button>
-            <p>or go to <span class='text-cyan'> <a v-on:click='gotoPage(5)'>SD Card mode</a></span> </p>
+            <p>or go to <span class='text-blue'> <a v-on:click='gotoPage(5)'>SD Card mode</a></span> </p>
           </div>
         </div>
 
@@ -121,13 +119,13 @@
           <p>Your kit is now trying to connect to the online platform, and this website has no connection to the kit anymore.</p>
           <p>Check the light on your Kit:</p>
           <ul>
-            <li><span class="text-cyan" >BLUE</span>: Your kit received the configuration and is trying to connect. If the led starts blinking there was a problem with the wifi credentials.</li>
+            <li><span class="text-blue" >BLUE</span>: Your kit received the configuration and is trying to connect. If the led starts blinking there was a problem with the wifi credentials.</li>
             <li><span class="text-red" >RED</span>: Some problem happened, reset your Kit and try again.</li>
           </ul>
         </div>
 
         <div v-show='page[4].visible'>
-          <h4 class="text-cyan">Your kit status</h4>
+          <h4 class="text-blue">Your kit status</h4>
 
           <table>
             <tr>
@@ -176,15 +174,17 @@
 
         <div v-show='page[6].visible'>
 
+          <label for="force-firmware-update">
+            <input type="checkbox" id="force-firmware-update" v-on:click="allowFirmwareUpdate()" />
+            Force allow firmware update
+          </label>
+
+          <h4>Kit info:</h4>
           <div id="kitinfo" class="font70">
             <ul>
               <li v-for="value, index in kitstatus"><b>{{index}}</b>: {{value}}</li>
             </ul>
           </div>
-
-          <h4>Kit info:</h4>
-
-
           <button id="copied-notification" class="btn bg-yellow" type="button" v-on:click="copyTextToClipboard()">Copy info to clipboard</button>
 
           <div id="id-logging">
@@ -219,10 +219,14 @@
         <br />
         <br />
 
-        <div v-show="showDebug" class="text-center text-grey font80">
-          {{ version }}
-          <hr />
-          {{ currentPage }} - {{ page[currentPage].footer }}
+        <div class="text-center text-grey font80">
+          SAM: {{ kitstatus.SAMversion }}
+          -
+          ESP: {{ kitstatus.ESPversion }}
+          <div v-show="showDebug" >
+            <hr />
+            {{ currentPage }} - {{ page[currentPage].footer }}
+          </div>
         </div>
 
         <!-- experimental -->
@@ -441,17 +445,20 @@ a{
   background: #C8E6ED;
   color: #8db2ba;
 }
+.text-blue{
+  color: #0C2EFB !important;
+}
 .text-green{
   color: #8CC252 !important;
 }
-.text-cyan{
-  color: #0C2EFB !important;
+.text-grey{
+  color: #ccc;
+}
+.text-orange{
+  color: #d0a600 !important;
 }
 .text-red{
   color: #FF3D4C;
-}
-.text-grey{
-  color: #ccc;
 }
 .text-right{
   text-align: right;
@@ -818,15 +825,12 @@ var app = new Vue({
 
     // POST the file to /action via AJAX
     submitFirmware: function(e){
-      console.log('Before calling ajax')
+      document.getElementById('firmware-update-status').innerHTML = 'Updating...'
       this.submitFirmwareAJAX(function(res){
         console.log('Response:')
         console.log(res);
       });
       console.log('After calling ajax, waiting for response..')
-
-      btn = document.getElementById('firmware_button');
-      btn.value = 'Updating..'
     },
 
     submitFirmwareAJAX: function(){
@@ -838,7 +842,7 @@ var app = new Vue({
         if (req.readyState === 4) {
           console.log('request:', req)
           console.log('response:', req.response);
-          document.getElementById('firmware-update-status').append(' ' + req.response)
+          document.getElementById('firmware-update-status').innerHTML = ' ' + req.response
         }
       }
       req.onerror = function(e){
