Some touches to ESP Firmware Update UI

--- a/esp/build_data/build_index.html
+++ b/esp/build_data/build_index.html
@@ -70,10 +70,11 @@
               <input id="firmware_button" type='submit' value='Update' class="btn":disabled=!checkIfFileSelected v-bind:class="{ 'bg-yellow': checkIfFileSelected }">
             </form>
            <p id="firmware-update-status" class="text-yellow"></p>
+	   <p id="firmware-status-extra">If you need more information please visit <span class="text-blue"><a href="https://docs.smartcitizen.me">docs.smartcitizen.me</a></span></p>
           </div>
           <div v-else>
             <p>Is this your first time here?</p>
-            <p>Remember before you start you need to visit <span class="text-blue">onboarding.smartcitizen.me</span> to obtain a Device Key</p>
+	    <p>Remember before you start you need to visit <span class="text-blue"><a href="https://onboarding.smartcitizen.me">onboarding.smartcitizen.me</a></span> to obtain a Device Key</p>
             <button class="btn bg-yellow" id="start" type="button" v-on:click='gotoPage()'>Start</button>
             <p>or go to <span class='text-blue'> <a v-on:click='gotoPage(5)'>SD Card mode</a></span> </p>
           </div>
