--- a/esp/build_data/index.html
+++ b/esp/build_data/index.html
@@ -70,10 +70,11 @@
               <input id="firmware_button" type='submit' value='Update' class="btn":disabled=!checkIfFileSelected v-bind:class="{ 'bg-yellow': checkIfFileSelected }">
             </form>
            <p id="firmware-update-status" class="text-yellow"></p>
+	   <p id="firmware-status-extra">If you need more information please visit <span class="text-blue"><a href="https://docs.smartcitizen.me">docs.smartcitizen.me</a></span></p>
           </div>
           <div v-else>
             <p>Is this your first time here?</p>
-            <p>Remember before you start you need to visit <span class="text-blue">onboarding.smartcitizen.me</span> to obtain a Device Key</p>
+	    <p>Remember before you start you need to visit <span class="text-blue"><a href="https://onboarding.smartcitizen.me">onboarding.smartcitizen.me</a></span> to obtain a Device Key</p>
             <button class="btn bg-yellow" id="start" type="button" v-on:click='gotoPage()'>Start</button>
             <p>or go to <span class='text-blue'> <a v-on:click='gotoPage(5)'>SD Card mode</a></span> </p>
           </div>
@@ -458,6 +459,7 @@ a{
 }
 .text-blue{
   color: #0019FF !important;
+  text-decoration: none;
 }
 .text-green{
   color: #00E597 !important;
@@ -836,8 +838,13 @@ var app = new Vue({
 
     // POST the file to /action via AJAX
     submitFirmware: function(e){
+      var that = this;
       firmStatus = document.getElementById('firmware-update-status');
-      firmStatus.innerHTML = 'Updating...'
+      firmStatusExtra = document.getElementById('firmware-status-extra');
+      firmStatus.classList = '';
+      firmStatus.classList += 'text-yellow';
+      firmStatus.innerHTML = 'Updating...';
+      firmStatusExtra.innerHTML = ' ';
 
       let formData = new FormData();
       let req = new XMLHttpRequest();
@@ -846,13 +853,19 @@ var app = new Vue({
       req.onreadystatechange = function() {
         if (req.readyState === 4) {
           console.log('request:', req);
-          firmStatus.innerHTML = ' ' + req.response
+          firmStatus.innerHTML = ' ' + req.response;
+          firmStatusExtra.innerHTML = ' ';
 
           // Color
           if (req.response.startsWith("ERROR")) {
+            that.notify('Update failed', 5000, 'bg-red');
+	    firmStatusExtra.innerHTML = 'Something went wrong :(<br/>Please be sure to select the right file and try again !!';
             firmStatus.classList = '';
             firmStatus.classList += 'text-red';
-          }else if (req.response.startsWith("Succeed")) {
+          } else if (req.response.startsWith("Succeed")) {
+            that.weHaveTriedConnecting = true;
+            that.notify('Kit Updated...', 5000);
+	    firmStatusExtra.innerHTML = 'Congratulations !!<br/>Your kit will restart so you can reconnect and complete the configuration process.<br/>If you need a Device key go to <span class="text-blue"><a href="https://onboarding.smartcitizen.me">onboarding.smartcitizen.me</a></span> to obtain a new one.';
             firmStatus.classList = '';
             firmStatus.classList += 'text-green';
           }
