Small changes on ESP webserver links

--- a/esp/build_data/build_index.html
+++ b/esp/build_data/build_index.html
@@ -74,7 +74,7 @@
           </div>
           <div v-else>
             <p>Is this your first time here?</p>
-	    <p>Remember before you start you need to visit <span class="text-blue"><a href="https://onboarding.smartcitizen.me">onboarding.smartcitizen.me</a></span> to obtain a Device Key</p>
+	    <p>Remember before you start you need to visit <span class="text-blue"><a href="https://start.smartcitizen.me">start.smartcitizen.me</a></span> to obtain a Device Key</p>
             <button class="btn bg-yellow" id="start" type="button" v-on:click='gotoPage()'>Start</button>
             <p>or go to <span class='text-blue'> <a v-on:click='gotoPage(5)'>SD Card mode</a></span> </p>
           </div>
