--- a/esp/build_data/index.html
+++ b/esp/build_data/index.html
@@ -119,8 +119,7 @@
           <p>Your kit is now trying to connect to the online platform, and this website has no connection to the kit anymore.</p>
           <p>Check the light on your Kit:</p>
           <ul>
-            <li><span class="text-blue" >BLUE</span>: Your kit received the configuration and is trying to connect. If the led starts blinking there was a problem with the wifi credentials.</li>
-            <li><span class="text-red" >RED</span>: Some problem happened, reset your Kit and try again.</li>
+		  <li>Your Kit light should be <span class="text-blue" >blue</span>.<br />If it's blinking fast, there is a problem with the WiFi credentials.<br />Press the button until the light turns red and repeat the process.</li>
           </ul>
         </div>
 
@@ -756,7 +755,7 @@ var app = new Vue({
 
       if (purpose == 'connect'){
         this.weHaveTriedConnecting = true;
-        this.notify('Kit is trying to connect online...', 2000);
+        this.notify('Kit is trying to connect online...', 5000);
         that.xmlWrapper(that.theApi + path +
             '?ssid=' + encodeURIComponent(that.selectedWifi) +
             '&password=' + encodeURIComponent(that.wifipass) +
